Alignment fix

--- a/themes/mcsalter/src/precss/page/_header.css
+++ b/themes/mcsalter/src/precss/page/_header.css
@@ -34,6 +34,7 @@
     }
 
     .header_item--logo {
+        text-align: left;
         img {
             display: block;
             max-width: none;
